--- a/src/assets/i18n/en_US.json
+++ b/src/assets/i18n/en_US.json
@@ -2663,5 +2663,6 @@
   "seo.defaults.title": "Intershop Progressive Web App",
   "seo.defaults.description": "Intershop - Progressive Web App - Demo PWA",
   "account.login.session_timeout.message": "You have been logged out automatically due to a long period of inactivity. Please log in again to continue shopping.",
-  "account.login.register_now": "You don't have an account yet?<br/><a href=\"{{0}}\">Register now</a>"
+  "account.login.register_now": "You don't have an account yet?<br/><a href=\"{{0}}\">Register now</a>",
+  "account.payment.no_entries": "Currently, you do not have any saved payment instruments."
 }
