feat: refactor the payment functionality after review

--- a/src/assets/i18n/de_DE.json
+++ b/src/assets/i18n/de_DE.json
@@ -496,7 +496,7 @@
   "account.payment.payment_changes.txt": "Änderungen: ",
   "account.payment.payment_created.message": "Die bevorzugte Zahlungsart wurde in Ihrem Konto gespeichert.",
   "account.payment.payment_delete.txt": "Löschen",
-  "account.payment.payment_deleted.message": "Die Zahlung wurde von Ihrem Konto gelöscht.",
+  "account.payment.payment_deleted.message": "Das Zahlungsmittel wurde von Ihrem Konto gelöscht.",
   "account.payment.payment_edit.txt": "Bearbeiten",
   "account.payment.payment_minOrderValue_post.text": ", ",
   "account.payment.payment_minOrderValue_pre.text": "verfügbar ab",
@@ -2611,7 +2611,7 @@
   "account.login.signin.heading": "Anmelden",
   "account.overview.personal_message_b2b.text": "Hallo, {{0}} ({{1}}).<br />Willkommen zurück!",
   "checkout.payment.addPayment.link": "Zahlungsmittel hinzufügen",
-  "checkout.payment.payWith.link": "Mit {{0}} bezahlen",
+  "checkout.payment.payWith.link": "Pay with {{0}}",
   "checkout.credit_card.cvc.label": "Kartenprüfnummer (CVC)",
   "checkout.credit_card.user.name": "Name des Karteninhabers",
   "checkout.credit_card.user.name.missing.error": "Bitte geben Sie den Namen des Karteninhabers an.",
